# dl-toda

./: NEWS.md  README.md  create_tfrecords.py  environment.yml  labels.py  models.py  prepare_fq_files.py  pyproject.toml  read_classifier_training.py  tfrecords_utils.py
DL_scripts/: AlexNet.py  BERT.py  DNA_model.py  DNA_model_1.py  DNA_model_2.py  NEKG_insert_size.py  VDCNN.py  VGG16.py  create_tfrecords.py  lstm.py  modeling.py  models.py  optimizers.py  read_classifier.py  read_classifier_training.py  read_classifier_training_wo_hvd.py  species_distribution.py  tf_bert_encoder.py  tfrecord2idx.py  tfrecords_bert_utils.py  tfrecords_utils.py  transformer.py
data/: accuracy-summary-subsets-testing.tsv  dl_toda_taxonomy.tsv  ncbi-sp-test-genomes-count  ncbi-sp-train-genomes-count  species_labels.json  testing_NCBI_species_read_count.tsv  testing_genomes.tsv  training_NCBI_species_read_count.tsv  training_genomes.tsv
dataprep_scripts/: balanced_dataset.py  data_for_cv.py  datasets.py  get_reads_from_fq.py  gtdb_tax.py  labels.py  ncbi_entrez.py  rank_data.py  read_simulator.py  run_art_sim.py  select_genomes.py  shuffle_reads.py  taxa_data.py  utils.py  vocab.py
meta_scripts/: taxa_profiling.py
vis_scripts/: Figure1_hist.R  Figure3_learning_curves.R  Figure5_score_distribution.r  Figure6_accuracy.R  Figure7_stacked_plots.R  FigureS2_precision_coverage.R  FigureS2_precision_training_reads.R  dl_toda_score_distribution.r  get_coverage.py  get_testing_epoch.py  learning_curves.R  mapping_summary.py  metrics.R  ncbi_tax_utils.py  parse_tool_output.py  sumary_circle.py  (+4 more)
